# identity-service

./: .env.example  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1e5d1b9b2f5a_add_token_version_to_users.py  c334839098c9_init_first_model_for_user.py
app/application/interfaces/: oauth_service.py  token_service.py
app/config/: config.py
app/domain/: User.py
app/domain/entities/: User.py
app/domain/protocols/: user_protocol.py
app/domain/value_object/: email.py
app/infrastructure/: di.py
app/infrastructure/auth/: google_oauth.py  jwt_service.py  telegram_validator.py
app/infrastructure/config/: config.py
app/infrastructure/database/: engine.py  session.py
app/infrastructure/mappers/: user_mapper.py
app/infrastructure/middleware/: cors.py
app/infrastructure/models/: user_models.py
app/infrastructure/repositories/: user_repository.py
app/infrastructure/security/: depends.py  oauth.py  security.py
app/infrastructure/services/: google_oauth_service.py
app/interfaces/controllers/: auth_user_controller.py  link_google_controller.py  profile_controller.py  user_controller.py
app/interfaces/dto/: auth_google.py  auth_telegram.py  link_google.py  profile.py  return_token.py  token.py  update_profile.py
app/interfaces/protocols/: user_protocol.py
app/presentation/api/: depends.py
app/usecase/: auth_via_google.py  auth_via_telegram.py  delete_profile.py  link_google_email.py  profile.py  refresh_token.py  update_profile_telegram.py
(+26 files in other folders)
